<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_artist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.android.superphonic.ArtistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/description_border"
            android:padding="@dimen/margin"
            android:text="@string/artist_activity_description"
            android:textColor="@color/colorAccentPink" />

        <TextView
            android:id="@+id/albums_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin"
            android:text="@string/albums"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccentPink" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/album1_artist_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:paddingBottom="@dimen/margin"
                android:paddingTop="@dimen/margin"
                android:src="@drawable/record" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/margin"
                    android:text="@string/album_name"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/margin"
                    android:text="@string/artist_name"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/singles_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin"
            android:text="@string/singles"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccentPink" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/song1_artist_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:paddingBottom="@dimen/margin"
                android:paddingTop="@dimen/margin"
                android:src="@drawable/song" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/margin"
                    android:text="@string/song_name"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/margin"
                    android:text="@string/artist_name"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>