<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.android.superphonic.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/colorPrimaryDark"
            android:label="@string/search_label" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/description_border"
            android:padding="@dimen/margin"
            android:text="@string/main_activity_description"
            android:textColor="@color/colorAccentPink" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/songs_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="@dimen/margin"
                android:text="@string/category_songs"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccentPink" />

            <RelativeLayout
                android:id="@+id/songs_show_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_songs_show_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="@dimen/margin"
                    android:paddingEnd="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:paddingTop="@dimen/margin"
                    android:text="@string/show_all"
                    android:textColor="@color/colorAccent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/text_songs_show_all"
                    android:layout_toStartOf="@id/text_songs_show_all"
                    android:paddingBottom="@dimen/margin"
                    android:paddingEnd="@dimen/margin_img"
                    android:paddingRight="@dimen/margin_img"
                    android:paddingTop="@dimen/margin"
                    android:src="@drawable/more20" />


            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/song1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:paddingBottom="@dimen/margin"
                android:paddingTop="@dimen/margin"
                android:src="@drawable/song" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/margin"
                    android:text="@string/song_name"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/margin"
                    android:text="@string/artist_name"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/song2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:paddingBottom="@dimen/margin"
                android:paddingTop="@dimen/margin"
                android:src="@drawable/song" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/margin"
                    android:text="@string/song_name"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/margin"
                    android:text="@string/artist_name"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artists_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="@dimen/margin"
                android:text="@string/category_artists"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccentPink" />

            <RelativeLayout
                android:id="@+id/artists_show_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_artists_show_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="@dimen/margin"
                    android:paddingEnd="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:paddingTop="@dimen/margin"
                    android:text="@string/show_all"
                    android:textColor="@color/colorAccent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/text_artists_show_all"
                    android:layout_toStartOf="@id/text_artists_show_all"
                    android:paddingBottom="@dimen/margin"
                    android:paddingEnd="@dimen/margin_img"
                    android:paddingRight="@dimen/margin_img"
                    android:paddingTop="@dimen/margin"
                    android:src="@drawable/more20" />


            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/artist_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:paddingBottom="@dimen/margin"
                android:paddingTop="@dimen/margin"
                android:src="@drawable/artist" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/artist_name"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/albums_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="@dimen/margin"
                android:text="@string/category_albums"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccentPink" />

            <RelativeLayout
                android:id="@+id/albums_show_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_albums_show_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="@dimen/margin"
                    android:paddingEnd="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:paddingTop="@dimen/margin"
                    android:text="@string/show_all"
                    android:textColor="@color/colorAccent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/text_albums_show_all"
                    android:layout_toStartOf="@id/text_albums_show_all"
                    android:paddingBottom="@dimen/margin"
                    android:paddingEnd="@dimen/margin_img"
                    android:paddingRight="@dimen/margin_img"
                    android:paddingTop="@dimen/margin"
                    android:src="@drawable/more20" />


            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/album_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:paddingBottom="@dimen/margin"
                android:paddingTop="@dimen/margin"
                android:src="@drawable/record" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/margin"
                    android:text="@string/album_name"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/margin"
                    android:text="@string/artist_name"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>